Closed
Bug 283356
Opened 21 years ago
Closed 20 years ago
nsPSPrinters.cpp compile error: implicit declaration of function `int strcasecmp(...)'
Categories
(Core :: Printing: Output, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: mfeil, Assigned: mfeil)
Details
(Whiteboard: [good first bug])
Attachments
(1 file)
|
845 bytes,
patch
|
kherron+mozilla
:
review+
tor
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0)
Build Identifier:
Source file gfx/src/psshared/nsPSPrinters.cpp has a compile error under QNX:
nsPSPrinters.cpp: In method `PRBool nsPSPrinterList::Enabled()':
nsPSPrinters.cpp:83: implicit declaration of function `int strcasecmp(...)'
I think the strcasecmp() should be changed to PL_strcasecmp(), since the
header "plstr.h" is already being included and the PL_strtok_r() function is
already being used elsewhere in the source file.
Reproducible: Always
Steps to Reproduce:
1. Install QNX 6.3.0 operating system
2. cvs co mozilla/client.mk
3. make -f client.mk checkout
4. ./configure
5. make
Actual Results:
Compile error in nsPSPrinters.cpp
Expected Results:
No compile error in nsPSPrinters.cpp
Comment 1•21 years ago
|
||
Accepting. Max, it'd be great if you could submit a patch for this; otherwise
I'll try to get to it in the next week or two.
Status: UNCONFIRMED → ASSIGNED
Component: GFX → Printing
Ever confirmed: true
Whiteboard: [good first bug]
Target Milestone: --- → mozilla1.8beta2
Updated•21 years ago
|
Assignee: general → kherron+mozilla
Status: ASSIGNED → NEW
| Assignee | ||
Comment 2•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
OS: other → Neutrino
Comment 3•20 years ago
|
||
Comment on attachment 175362 [details] [diff] [review]
Proposed patch
Simple and good fix, assuming it just fell of the radar and setting review flag
to get it back there.
Attachment #175362 -
Flags: review?(kherron+mozilla)
Updated•20 years ago
|
Attachment #175362 -
Flags: superreview?(tor)
Attachment #175362 -
Flags: review?(kherron+mozilla)
Attachment #175362 -
Flags: review+
Attachment #175362 -
Flags: superreview?(tor) → superreview+
Comment 4•20 years ago
|
||
Checking in nsPSPrinters.cpp;
/cvsroot/mozilla/gfx/src/psshared/nsPSPrinters.cpp,v <-- nsPSPrinters.cpp
new revision: 1.4; previous revision: 1.3
done
Assignee: kherron+mozilla → maxf
Target Milestone: mozilla1.8beta2 → mozilla1.9alpha
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•