Bug 283356 : nsPSPrinters.cpp compile error: implicit declaration of function `int strcasecmp(...)', patch by Max Feil <mfeil@qnx.com>, r=kherron, sr=tor